Ticket #1164: Adding js fix in absence of a css fix to render embedded media's width properly while keeping it aligned in center.

--- a/drupal/sites/all/themes/checkdesk/assets/css/ie8-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/ie8-rtl.css
@@ -20,10 +20,6 @@ nav[role='navigation'] #user-menu SPAN.avatar {
   margin: 0;
 }
 
-.report .report-content .report-media .container {
-  display: inline;
-}
-
 .dropdown-menu {
   -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#DDDDDD')";
   border: 1px solid #CCCCCC;
