--- a/drupal/sites/all/themes/checkdesk/assets/scss/ie8.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/ie8.scss
@@ -34,9 +34,8 @@ nav[role='navigation'] #user-menu SPAN.avatar {
 
 // stop container from collapsing
 // due to display: inline-block;
-.report .report-content .report-media .container {
-	display: inline;
-}
+// .report .report-content .report-media .container {
+// }
 
 // clarify dropdown menu's edges 
 .dropdown-menu {
